@startuml

'class enumeration
class Company
class WaitingRoom
class RecoveryRoom
class Vaccine
class VaccineType
class SNSUser




abstract VaccinationCenter
class HealthCareCenter extends VaccinationCenter{
-ARG/AGES
}
class MassVaccinationCenter extends VaccinationCenter{
-VaccineType
}

'class components
class SNSUser {
-name
-sex
-Birth Date
-Address
-Phone number
-E-mail
-SNS number
-Citizen card number
}

class Vaccine {
-name
-brand
-type
-age groups
-vaccines per age group
-dosage
-time interval regarding previous vaccine administered
}

class Company {
-name
}

class VaccineType {
-Code
-Description
-Technology
}


'class relation




CenterCoordinator "1" -- "1" VaccinationCenter : responsible for >
CenterCoordinator "1" -- "1..*" Company : elaborate relatories to >

Company "1" -- "1..*" VaccinationCenter : has >
Company "1" -- "*" Vaccine : has >
Company "1" -- "*" VaccineType : has >
Company "1" -- "*" SNSUser : has >

Vaccine "1..*" -- "1..*" VaccineType : is of >


SNSUser "1..*" -- "1..*" VaccineType : receives >

VaccinationCenter "1..*" -- "1..*" WaitingRoom : has >
VaccinationCenter "1..*" -- "1..*" RecoveryRoom : has >
VaccinationCenter "1..*" -- "1..*" SNSUser : receives >
VaccinationCenter "1..*" -- "1..*" VaccineType : where is administered >

WaitingRoom "1" -- "1..*" SNSUser : for >
RecoveryRoom "1" -- "1..*" SNSUser : for >


@enduml